Fix Nav logo ratio on mobile

--- a/src/components/Nav/Nav.module.scss
+++ b/src/components/Nav/Nav.module.scss
@@ -17,6 +17,7 @@
 
   img {
     width: 180px;
+    height: 100%;
 
     @include lg {
       width: 220px;
